--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "chapter3",
+  "name": "rest_api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+    ,"dev":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
-  },
-  "devDependencies": {
+    "mongoose": "^8.3.1",
     "nodemon": "^3.1.0"
   }
 }
